cluster/pufferpanel/sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pufferpanel-sftp
  namespace: pufferpanel
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: pufferpanel   # <- adjust if your labels differ
  ports:
    - name: sftp
      protocol: TCP
      port: 5657        # service port inside cluster
      targetPort: 5657  # containerPort in the pod
      nodePort: 30657
