cluster/pufferpanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pufferpanel
  namespace: pufferpanel
  annotations:
    # cert-manager: use your existing ClusterIssuer
    cert-manager.io/cluster-issuer: internal-ca

    # Force HTTPS
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    # Optional but nice for WebSockets / long-lived console connections
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
#    nginx.ingress.kubernetes.io/proxy-body-size: "2g"

spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - panel.local.net
      secretName: wildcard-local-net-tls

  rules:
    - host: panel.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pufferpanel      # <- Service name from the Helm chart
                port:
                  number: 8080
