cluster/pufferpanel/ingressHTTPS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pufferpanel-external
  namespace: pufferpanel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-domeneshop
    kubernetes.io/ingress.class: traefik-external
spec:
  ingressClassName: traefik-external
  rules:
    - host: panel.nebulahvelvet.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pufferpanel
                port:
                  number: 8080
  tls:
    - secretName: pufferpanel-tls
      hosts:
        - panel.nebulahvelvet.no
